--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -334,3 +334,6 @@
 {% if site.newsletter.enabled %}
   <script defer src="{{ '/assets/js/newsletter.js' | relative_url | bust_file_cache }}"></script>
 {% endif %}
+
+<!-- Scroll Header Animation -->
+<script defer src="{{ '/assets/js/scroll-header.js' | relative_url | bust_file_cache }}"></script>
