--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -11,7 +11,7 @@ layout: default
 <div class="post">
   <header class="post-header">
     {% unless page.hide_title %}
-      <h1 class="post-title">{{ page.title }}</h1>
+      <h1 class="post-title watermelon-name">{{ page.title }}</h1>
     {% endunless %}
     {% if page.description %}
       <p class="post-description">{{ page.description }}</p>
