--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,7 +25,7 @@ strong {
   align-items: flex-end !important;
   gap: 0.1em !important;
   flex-wrap: wrap !important;
-  font-family: 'Arial Black', 'Impact', sans-serif !important;
+  font-family: "Arial Black", "Impact", sans-serif !important;
   font-weight: 400 !important;
   letter-spacing: 0.01em !important;
 
@@ -50,7 +50,7 @@ strong {
   gap: 0.05em !important;
   font-size: 1rem !important;
   font-weight: 400 !important;
-  
+
   .letter {
     line-height: 1 !important;
     display: inline-block !important;
