make first name not bold

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -32,6 +32,10 @@ strong {
   .letter {
     line-height: 0.9 !important;
     display: inline-block !important;
+
+    &.bold {
+      font-weight: 900 !important;
+    }
   }
 
   .watermelon-a {
@@ -54,6 +58,10 @@ strong {
   .letter {
     line-height: 1 !important;
     display: inline-block !important;
+
+    &.bold {
+      font-weight: 900 !important;
+    }
   }
 
   .watermelon-a {
