--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,14 +23,15 @@ strong {
 .watermelon-name {
   display: flex !important;
   align-items: flex-end !important;
-  gap: 0.1em !important;
+  gap: 0.05em !important;
   flex-wrap: wrap !important;
   font-family: "Arial Black", "Impact", sans-serif !important;
   font-weight: 400 !important;
   letter-spacing: 0.01em !important;
+  font-size: 1rem !important;
 
   .letter {
-    line-height: 0.9 !important;
+    line-height: 1 !important;
     display: inline-block !important;
 
     &.bold {
@@ -40,8 +41,8 @@ strong {
 
   .watermelon-a {
     display: inline-block !important;
-    width: 0.8em !important;
-    height: 0.9em !important;
+    width: 0.7em !important;
+    height: 0.8em !important;
     vertical-align: baseline !important;
     margin-bottom: 0.05em !important;
   }
