--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,26 +23,28 @@ strong {
 .watermelon-name {
   display: flex !important;
   align-items: flex-end !important;
-  gap: 0.05em !important;
+  gap: 0.1em !important;
   flex-wrap: wrap !important;
   font-family: "Arial Black", "Impact", sans-serif !important;
   font-weight: 400 !important;
-  letter-spacing: 0.01em !important;
-  font-size: 1rem !important;
+  letter-spacing: 0.00001em !important;
 
   .letter {
-    line-height: 1 !important;
+    line-height: 0.9 !important;
     display: inline-block !important;
+    font-family: "Arial", "Helvetica", sans-serif !important;
+    font-weight: 400 !important;
 
     &.bold {
+      font-family: "Arial Black", "Impact", sans-serif !important;
       font-weight: 900 !important;
     }
   }
 
   .watermelon-a {
     display: inline-block !important;
-    width: 0.7em !important;
-    height: 0.8em !important;
+    width: 0.8em !important;
+    height: 0.9em !important;
     vertical-align: baseline !important;
     margin-bottom: 0.05em !important;
   }
@@ -59,8 +61,11 @@ strong {
   .letter {
     line-height: 1 !important;
     display: inline-block !important;
+    font-family: "Arial", "Helvetica", sans-serif !important;
+    font-weight: 400 !important;
 
     &.bold {
+      font-family: "Arial Black", "Impact", sans-serif !important;
       font-weight: 900 !important;
     }
   }
