--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -335,5 +335,8 @@
   <script defer src="{{ '/assets/js/newsletter.js' | relative_url | bust_file_cache }}"></script>
 {% endif %}
 
+<!-- Watermelon Generator -->
+<script src="{{ '/assets/js/watermelon-generator.js' | relative_url | bust_file_cache }}"></script>
+
 <!-- Scroll Header Animation -->
 <script defer src="{{ '/assets/js/scroll-header.js' | relative_url | bust_file_cache }}"></script>
