--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,9 +5,9 @@
 // Watermelon proportions - EDIT THESE VALUES TO CHANGE THE DESIGN
 // Total should equal 100
 :root {
-  --watermelon-red-ratio: 80;      // Red flesh area percentage
-  --watermelon-white-ratio: 12;    // White layer percentage
-  --watermelon-green-ratio: 8;     // Green rind percentage
+  --watermelon-red-ratio: 80; // Red flesh area percentage
+  --watermelon-white-ratio: 12; // White layer percentage
+  --watermelon-green-ratio: 8; // Green rind percentage
 }
 
 // Typography
@@ -31,11 +31,11 @@ strong {
 .watermelon-name {
   display: flex !important;
   align-items: flex-end !important;
-  gap: 0.1em !important;
+  gap: 0.01em !important;
   flex-wrap: wrap !important;
   font-family: "Arial Black", "Impact", sans-serif !important;
   font-weight: 400 !important;
-  letter-spacing: 0.00001em !important;
+  letter-spacing: -0.05em !important;
 
   .letter {
     line-height: 0.9 !important;
@@ -49,7 +49,7 @@ strong {
     }
   }
 
-  .watermelon-a {
+  .watermelon-d {
     display: inline-block !important;
     width: 0.8em !important;
     height: 0.9em !important;
@@ -78,7 +78,7 @@ strong {
     }
   }
 
-  .watermelon-a {
+  .watermelon-d {
     display: inline-block !important;
     width: 0.7em !important;
     height: 0.8em !important;
