--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -5,11 +5,9 @@ layout: default
   <header class="post-header">
     <h1 class="post-title watermelon-name">
       {% if site.title == 'blank' %}
-        <span class="letter">E</span><span class="letter">Y</span><span class="letter">A</span>
-        <svg class="watermelon-d" viewBox="0 0 100 100" role="img" aria-label="D"></svg>
-        <span style="margin: 0 0.2em;"></span>
-        <span class="letter bold">G</span><span class="letter bold">A</span>
-        <svg class="watermelon-d" viewBox="0 0 100 100" role="img" aria-label="D"></svg>
+        <span class="letter">E</span><span class="letter">Y</span><span class="letter">A</span><span class="watermelon-d"></span>
+        <span style="margin: 0 0.4em;"></span>
+        <span class="letter bold">G</span><span class="letter bold">A</span><span class="watermelon-d"></span>
       {% else %}
         {{ site.title }}
       {% endif %}
