--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,12 @@
   --watermelon-red-ratio: 80; // Red flesh area percentage
   --watermelon-white-ratio: 12; // White layer percentage
   --watermelon-green-ratio: 8; // Green rind percentage
+  --navbar-logo-size: 2.75rem;
+  --navbar-logo-color: #f45252;
+}
+
+html[data-theme="dark"] {
+  --navbar-logo-color: #3b82f6;
 }
 
 // Typography
@@ -30,12 +36,12 @@ strong {
 // Watermelon Name Styles
 .watermelon-name {
   display: flex !important;
-  align-items: flex-end !important;
+  align-items: baseline !important;
   gap: 0.01em !important;
   flex-wrap: wrap !important;
   font-family: "Arial Black", "Impact", sans-serif !important;
   font-weight: 400 !important;
-  letter-spacing: -0.05em !important;
+  letter-spacing: 0.15em !important;
 
   .letter {
     line-height: 0.9 !important;
@@ -49,12 +55,22 @@ strong {
     }
   }
 
-  .watermelon-d {
+  .watermelon-a {
     display: inline-block !important;
     width: 0.8em !important;
     height: 0.9em !important;
     vertical-align: baseline !important;
     margin-bottom: 0.05em !important;
+  }
+
+  .watermelon-d {
+    display: inline-block !important;
+    width: 1em !important;
+    height: 1em !important;
+    vertical-align: bottom !important;
+    //margin-left: -0.1em !important;
+    //margin-right: -0.05em !important;
+    margin-bottom: 0 !important;
   }
 }
 
@@ -78,12 +94,22 @@ strong {
     }
   }
 
-  .watermelon-d {
+  .watermelon-a {
     display: inline-block !important;
     width: 0.7em !important;
     height: 0.8em !important;
     vertical-align: baseline !important;
     margin-bottom: 0.05em !important;
+  }
+
+  .watermelon-d {
+    display: inline-block !important;
+    width: 1.05em !important;
+    height: 1em !important;
+    vertical-align: baseline !important;
+    margin-left: -0.08em !important;
+    margin-right: -0.05em !important;
+    margin-bottom: 0 !important;
   }
 }
 
@@ -353,6 +379,36 @@ ul.task-list input[type="checkbox"] {
 
   .navbar-brand {
     color: var(--global-text-color);
+  }
+
+  .navbar-logo {
+    padding: 0;
+    display: flex;
+    align-items: center;
+
+    .navbar-logo-icon {
+      width: var(--navbar-logo-size);
+      height: var(--navbar-logo-size);
+      display: block;
+      background-color: var(--navbar-logo-color);
+      background-image: url("/assets/img/favicon.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      transition: background-color 0.3s ease;
+
+      @supports ((-webkit-mask-image: url("")) or (mask-image: url(""))) {
+        background-image: none;
+        -webkit-mask-image: url("/assets/img/favicon.png");
+        mask-image: url("/assets/img/favicon.png");
+        -webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+        -webkit-mask-position: center;
+        mask-position: center;
+        -webkit-mask-size: contain;
+        mask-size: contain;
+      }
+    }
   }
 
   .navbar-nav .nav-item .nav-link {
