--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -5,7 +5,7 @@
       {% if page.permalink != '/' %}
         <a class="navbar-brand navbar-logo" href="{{ site.baseurl }}/" aria-label="Home">
           <span class="navbar-logo-icon" aria-hidden="true"></span>
-          <img class="navbar-logo-img" src="{{ '/assets/img/favicon.png' | relative_url }}" alt="Site logo" />
+          <img class="navbar-logo-img" src="{{'/assets/img/favicon.png' | relative_url }}" alt="Site logo">
         </a>
       {% elsif site.enable_navbar_social %}
         <!-- Social Icons -->
