fireflies spawn from profile

--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -340,3 +340,6 @@
 
 <!-- Scroll Header Animation -->
 <script defer src="{{ '/assets/js/scroll-header.js' | relative_url | bust_file_cache }}"></script>
+
+<!-- Fireflies Positioning -->
+<script defer src="{{ '/assets/js/fireflies.js' | relative_url | bust_file_cache }}"></script>
