--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -422,7 +422,7 @@ ul.task-list input[type="checkbox"] {
 
   // Dark theme override
   html[data-theme="dark"] .navbar-logo .navbar-logo-icon {
-    background-color: $blue-color;
+    background-color: $blue-color !important;
   }
 }
 
