--- a/_sass/_fireflies.scss
+++ b/_sass/_fireflies.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 1;
+  z-index: 5;
   overflow: hidden;
 }
 
@@ -20,6 +20,7 @@
     0 0 10px var(--global-theme-color),
     0 0 20px var(--global-theme-color),
     0 0 30px var(--global-theme-color);
+  mix-blend-mode: screen;
   animation: float 15s infinite linear;
   opacity: 0;
   left: 50% !important;
