last name with theme color

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -15,7 +15,7 @@ layout: default
         {% else %}
           {{ site.first_name -}}
           {%- if site.middle_name %} {{ site.middle_name }}{% endif %}
-          {{ site.last_name }}
+          <span class="last-name-accent">{{ site.last_name }}</span>
         {% endif %}
       {% endif %}
     </h1>
