--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,6 +28,10 @@ strong {
   color: var(--global-text-color);
 }
 
+.last-name-accent {
+  color: var(--global-theme-color);
+}
+
 // Watermelon Name Styles
 .watermelon-name {
   display: flex !important;
