--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -30,6 +30,8 @@ strong {
 
 .last-name-accent {
   color: var(--global-theme-color);
+  margin-left: 0.35em;
+  display: inline-block;
 }
 
 // Watermelon Name Styles
@@ -40,7 +42,7 @@ strong {
   flex-wrap: wrap !important;
   font-family: "Arial Black", "Impact", sans-serif !important;
   font-weight: 400 !important;
-  letter-spacing: 0.05em !important;
+  letter-spacing: 0.1em !important;
 
   .letter {
     line-height: 0.9 !important;
@@ -77,7 +79,7 @@ strong {
 .watermelon-name-nav {
   display: flex !important;
   align-items: flex-end !important;
-  gap: 0 !important;
+  gap: 0.5em !important;
   font-size: 1rem !important;
   font-weight: 400 !important;
 
